# dictation

./: .gitignore  Cargo.toml  download-model.sh  flake.nix  plan.md
client/: Cargo.toml
client/src/: audio.rs  main.rs
daemon/: Cargo.toml
daemon-py/: VENV_SETUP.md  audio.py  config.py  daemon.py  dictation_daemon.py  main.py  model_manager.py  requirements-rocm.txt  requirements.txt  run_daemon.sh  simple_daemon.py  test_fuzzy_overlap.py  transcription.py  utils.py
daemon/src/: daemon.rs  main.rs  whisper.rs
models/: README.md
popup/: Cargo.toml
popup/src/: app.rs  config.rs  daemon_comm.rs  main.rs  settings_app.rs  ui.rs
shared/: Cargo.toml
shared/src/: config.rs  ipc.rs  lib.rs  types.rs
