[workspace]
members = [
    "daemon",
    "client", 
    "popup",
    "shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"

# Audio dependencies
cpal = "0.15"
rodio = "0.17"

# IPC and system dependencies
nix = "0.27"
dbus = "0.9"

# UI dependencies for popup
gtk4 = "0.7"
libadwaita = "0.5"

# Whisper integration
whisper-rs = "0.10"