[package]
name = "dictation-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
cpal = { workspace = true }
nix = { workspace = true }
dbus = { workspace = true }
whisper-rs = { workspace = true }