[package]
name = "dictation-popup"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
eframe = "0.28"
egui = "0.28"
arboard = "3.0"