[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
bincode = "1.3"
dirs = { workspace = true }