[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
rmp-serde = "1.1"
dirs = { workspace = true }